kajit/tests/snapshots/corpus__generated_ra_mir_json_transparent_string_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 573
expression: ra_text
---
ra_func @0 {
  block b0:
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    term: return
    succs: (none)
}
